<resources>
    <string name="app_name">Ticket Movie</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_plaing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="pre_sale">Presale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="masuk">MASUK AKUN</string>
    <string name="daftar_baru">DAFTAR AKUN BARU</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="hint_username">Masukan username anda</string>
    <string name="hint_pass">Masukan password</string>
    <string name="hint_name">Masukan nama</string>
    <string name="hint_email">Masukan E-mail</string>
    <string name="signup_welcome">Welcome, \nSilviNda</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="account_name">Silvinda</string>
    <string name="account_saldo">IDR 500.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="title_movie">Avengers: Infinity War</string>
    <string name="movie_genre">Action, Sci-fi, Kids</string>
    <string name="movie_sinopsis">The Avengers must stop Thanos, a mad Titan, and his\narmy from getting their hands on all the infinity stones.\nHowever, the mad Titan is prepared to go to any lengths\nto carry out his insane plan.</string>
    <string name="storyboard">Storyboard</string>
    <string name="movie_actor">Who’s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_bayar">Total Harus Bayar</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="saldo_kurang">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="checkout_success_desc">Tiket telah berhasil dibeli \ndan selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo">Saldo Tersedia</string>
    <string name="history">History</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_12_aug_10_am">12 Aug, 10 AM</string>
    <string name="depok_mall_cinema_3">Depok Mall, Cinema 3</string>
</resources>